# taiyin-ephemeris

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  ROADMAP.md
astrology_extension/: ayanamsa.cpp  ayanamsa.h
astrology_extension/tests/: test_ayanamsa.cpp
data/kepler/sbdb/: manifest.json  sbdb-tier0-core.tkc1  sbdb-tier1-first1000-numbered.tkc1  sbdb-tier2-pha.tkc1
docs/: ephemeris_runtime_architecture.md
examples/: apparent_chart_pipeline.cpp  bare_chart_pipeline.cpp
include/taiyin/: angle.h  apparent_position.h  body_id.h  chebyshev.h  coordinates.h  corrections.h  dispatch.h  earth_rotation.h  geometry.h  interpolation.h  math_solvers.h  observer.h  physical_constants.h  star_catalog_tsc1.h  star_provider_tsf1.h  stars.h  state.h  status.h  time.h  vector3.h
include/taiyin/internal/: base64.h  builtin_loader.h  custom_ephemeris_source_registry.h  descriptor_loader.h  eop.h  eop_finals2000a_data.h  ephemeris_block.h  ephemeris_cache.h  ephemeris_catalog.h  ephemeris_discovery.h  ephemeris_file_loader.h  gzip.h  kepler.h  kepler_catalog_discovery.h  kepler_catalog_tkc1.h  kepler_file.h  kepler_source_registry.h  mapped_file.h  moshier.h  moshier_builtin.h  opm4.h  opm4_catalog_discovery.h  opm_core.h  path_utils.h  route_inflight_map.h  spk.h  spk_catalog_discovery.h  star_file.h  tkc1_catalog_discovery.h  tsc1_catalog_discovery.h  writer_preferred_rwlock.h
include/taiyin/runtime/: ephemeris_service.h  handle_types.h  major_body_apparent.h  pipeline.h  runtime_registry.h  service_locator.h  taiyin_runtime.h
legacy/pipeline_v1/: README.md
legacy/pipeline_v1/include/taiyin/legacy/: pipeline.h
legacy/pipeline_v1/src/: pipeline.cpp
legacy/pipeline_v1/tests/: test_legacy_pipeline_oracle.cpp
legacy/pipeline_v2/: README.md
legacy/pipeline_v2/include/taiyin/legacy/pipeline_v2/: artifact_store.h  core_steps.h  pipeline_context.h  pipeline_v2.h
legacy/pipeline_v2/src/pipeline_v2/: artifact_store.cpp  core_steps.cpp  pipeline_v2.cpp
legacy/pipeline_v2/tests/: test_legacy_pipeline_v2.cpp  test_legacy_pipeline_v2_mars_demo.cpp
plans/: tsc1_v1_known_limitations.md
src/: angle.cpp  apparent_position.cpp  builtin_loader.cpp  chebyshev.cpp  coordinates.cpp  corrections.cpp  custom_ephemeris_source_registry.cpp  descriptor_loader.cpp  dispatch.cpp  earth_rotation.cpp  eop.cpp  ephemeris_block.cpp  ephemeris_cache.cpp  ephemeris_catalog.cpp  ephemeris_discovery.cpp  ephemeris_file_loader.cpp  geometry.cpp  interpolation.cpp  kepler.cpp  kepler_catalog_discovery.cpp  kepler_catalog_tkc1.cpp  kepler_file.cpp  kepler_source_registry.cpp  math_solvers.cpp  moshier.cpp  moshier_builtin.cpp  observer.cpp  opm4.cpp  opm4_catalog_discovery.cpp  opm_core.cpp  route_inflight_map.cpp  spk.cpp  spk_catalog_discovery.cpp  star_catalog_tsc1.cpp  star_file.cpp  star_provider_tsf1.cpp  stars.cpp  state.cpp  time.cpp  tkc1_catalog_discovery.cpp  (+2 more)
src/dispatch_wrappers/: frame_route.cpp  nutation.cpp  precession.cpp  refraction.cpp  tdb.cpp
src/internal/: base64.cpp  coordinate_model_data.cpp  coordinate_model_data.h  delta_t_data.cpp  delta_t_data.h  erfa_cirs_subset.cpp  erfa_cirs_subset.h  gzip.cpp  mapped_file.cpp
src/runtime/: ephemeris_service.cpp  major_body_apparent.cpp  pipeline.cpp  runtime_registry.cpp  service_locator.cpp  taiyin_runtime.cpp
tests/: test_apparent_opm4_vs_swiss.cpp  test_apparent_position.cpp  test_apparent_position_oracles.cpp  test_apparent_self_skip.cpp  test_celestial_body_registry.cpp  test_compile_star_catalog.py  test_coordinates.cpp  test_corrections.cpp  test_corrections_oracles.cpp  test_custom_ephemeris_source_registry.cpp  test_custom_source_lifecycle.cpp  test_descriptor_loader.cpp  test_dispatch_models.cpp  test_env.h  test_eop.cpp  test_ephemeris_block.cpp  test_ephemeris_cache.cpp  test_ephemeris_catalog.cpp  test_ephemeris_mvp_end_to_end.cpp  test_ephemeris_singleflight.cpp  test_gaia_star_astrometry.py  test_geometry.cpp  test_global_ephemeris_runtime.cpp  test_kepler.cpp  test_kepler_catalog_discovery.cpp  test_kepler_catalog_tkc1.cpp  test_kepler_file.cpp  test_kepler_source_registry.cpp  test_low_level_oracles.cpp  test_major_body_apparent.cpp  test_mapped_file.cpp  test_math_primitives.cpp  test_math_solvers.cpp  test_moshier.cpp  test_opm4.cpp  test_opm4_catalog_discovery.cpp  test_opm4_file_loader.cpp  test_pipeline.cpp  test_pipeline_bare_chart.cpp  test_pipeline_opm4_vs_swiss.cpp  (+15 more)
tools/: compile_star_catalog.py  convert_opm3_tree_to_opm4.py  fetch_gaia_star_astrometry.py  fetch_jpl_sbdb_tkc1.py  generate_moshier_builtin.py  generate_opm4.py  generate_spk_jplephem_oracles.py  generate_star_identity_manifest.py  star_catalog_sources.py  star_identity_fixed_seed.csv  star_identity_manifest_schema.md  validate_private_opm4_vs_spk.cpp
